fixed bug that you could't click the close button on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -63,6 +63,7 @@ body {
   right: 25px;
   font-size: 35px;
   font-weight: bold;
+  z-index: 5;
 }
 
 .close:hover,
